<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_210mdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_17mdp"
                android:text="@string/our_mission"
                android:textColor="@color/black"
                android:textSize="@dimen/_16font_mdp"
                android:textStyle="bold" />

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_11mdp"
                android:text="@string/madrasha_tottho"
                android:textSize="@dimen/_11font_mdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_11mdp"
                android:text="@string/our_services"
                android:textColor="@color/black"
                android:textSize="@dimen/_16font_mdp"
                android:textStyle="bold" />

            <View
                android:layout_width="210dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_14mdp"
                android:text="@string/madrasha_tottho_24"
                android:textSize="@dimen/_11font_mdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="@dimen/_4mdp"
                android:text="বিঃ দ্রঃ- কম্পিউটারের প্রাথমিক ধারণা দেওয়া হয়।"
                android:textColor="@color/green"
                android:textSize="@dimen/_11font_mdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/dark"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:background="@color/dark"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:text="@string/study_topic"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16font_mdp"
                        android:textStyle="bold" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:gravity="center_vertical"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/Quranandtamjid"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/arbisahitto"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/urdukitab"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/islamiyat"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/bengali"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/ingreji"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/gonit"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/computer_prosikkhon"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/hefjobivag"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/dark" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="20dp"
                                android:gravity="center_horizontal"
                                android:text="@string/keratbivag"
                                android:textColor="@color/dark"
                                android:textSize="@dimen/_11font_mdp" />

                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:background="@color/green"
                        android:text="@string/jogajoger"
                        android:textColor="@color/dark"
                        android:textSize="@dimen/_16font_mdp"
                        android:textStyle="bold" />


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_55mdp"
                        android:layout_height="@dimen/_55mdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/elias1" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/prodhansikkhokh_information"
                        android:textColor="@color/dark"
                        android:textSize="@dimen/_11font_mdp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/phon"
                        android:textColor="@color/dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/elias01756829091_gmail_com"
                        android:textColor="@color/dark"
                        android:textSize="@dimen/_9font_mdp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/amaderapp"
                            android:textColor="@color/red" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/gachbariyamadrasha"
                            android:textColor="@color/green"
                            android:textStyle="bold"

                            />


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="3dp"
                        android:text="ম্যাপে ক্লিক করুন-"
                        android:textColor="@color/mapclick_color"
                        android:textSize="@dimen/_11font_mdp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200mdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/mymap" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</FrameLayout>