<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2mdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="12dp">

                <TextView
                    android:id="@+id/teacherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mahmud_islam"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_9font_mdp" />

                <TextView
                    android:id="@+id/teacherPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4mdp"
                    android:text="@string/principal"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_9font_mdp" />

                <TextView
                    android:id="@+id/teacherEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4mdp"
                    android:text="@string/mahmud0639_gmail_com"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_9font_mdp" />


            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/teacherImageId"
                android:layout_width="@dimen/_60mdp"
                android:layout_height="@dimen/_60mdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:layout_weight="0.5"
                android:src="@drawable/m5" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>